# win-polyfill-export

./: .gitignore  CMakeLists.txt  README.md  package.json  tsconfig.json
.github/workflows/: windows-msvc.yml
cmake/: CpkExcludeMsvcrt.cmake  CpkRunTest.cmake  FileExecuteCaptureOutput.cmake  FileGenerateIncludeList.cmake  FileGenerateLiteralForLangC.cmake
cmake/modules/: MSUnitTestFrameworkConfig.cmake
docs/: gen-apisetschema.bat  gen-shell.bat  gen-win32-api-index.bat  gen.bat
gens/: gen-exports-decls-cpp.cpp  gen-exports-decls.c  gen-macro-expand-x64.bat  gen-macro-expand-x86.bat
gens/x64/: advapi32_basic.h  advapi32_delta.h  advapi32_full.h  bcrypt_full.h  bluetoothapis_delta.h  cfgmgr32_basic.h  cfgmgr32_delta.h  crypt32_basic.h  crypt32_delta.h  crypt32_full.h  d3d12_delta.h  d3d12_full.h  d3d9_basic.h  d3d9_delta.h  d3d9_full.h  dbghelp_basic.h  dbghelp_delta.h  dwmapi_full.h  dwrite_full.h  dxgi_delta.h  dxva2_full.h  esent_basic.h  esent_delta.h  gdi32_basic.h  gdi32_delta.h  gdi32_full.h  iphlpapi_basic.h  iphlpapi_delta.h  iphlpapi_full.h  kernel32_basic.h  kernel32_delta.h  kernel32_full.h  mf_delta.h  mf_full.h  ncrypt_full.h  ndfapi_full.h  netapi32_basic.h  netapi32_delta.h  ntdll_basic.h  ntdll_delta.h  (+40 more)
gens/x86/: advapi32_basic.h  advapi32_delta.h  bcrypt_delta.h  bcryptprimitives_full.h  bluetoothapis_full.h  cfgmgr32_full.h  crypt32_basic.h  crypt32_delta.h  d3d11_delta.h  d3d11_full.h  d3d9_delta.h  dbghelp_basic.h  dbghelp_delta.h  dbghelp_full.h  dwmapi_delta.h  dwrite_delta.h  dxgi_full.h  dxva2_delta.h  esent_basic.h  esent_delta.h  esent_full.h  gdi32_basic.h  iphlpapi_basic.h  iphlpapi_delta.h  kernel32_basic.h  kernel32_delta.h  mfplat_full.h  mfreadwrite_full.h  ncrypt_delta.h  ndfapi_delta.h  netapi32_basic.h  netapi32_delta.h  netapi32_full.h  ntdll_basic.h  ntdll_delta.h  ole32_basic.h  ole32_delta.h  pdh_basic.h  pdh_delta.h  pdh_full.h  (+28 more)
scripts/: ExportSymbol.ts  compiler.ts  file-util.ts  gen-thunks.ts  gen-winsdk-lib-exports.ts  suffix-array.ts
src/: CMakeLists.txt  api-ms-win-core-path-l1-1-0_fake.def  basic-export.c  fake-linker.cpp  fake.cpp  gen-exports-api.cpp  gen-exports-api.h  gen-exports-compile.c  gen-exports-compile.cpp  gen-exports-fixes.h  gen-exports-function-info.cpp  gen-exports-function-info.h  gen-exports.cpp  gen-exports.h  one-core-linker.cpp  suffix-array-gen.cpp
src/gen-fixes/: advapi32.h  esent.h  gdi32.h  iphlpapi.h  kernel32.h  netapi32.h  ntdll.h  pdh.h  setupapi.h  shell32.h  user32.h
